--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/style.css"> 
   <link rel="stylesheet" href="css/styledesk.css"> 
   <link rel="icon" type="image/x-icon" href="https://live.staticflickr.com/65535/52765412632_0a7f491f9e_k.jpg">
-  <title>PORTFOLIO</title> 
+  <title>John Paul Polendey</title> 
  </head> 
  <body>
    <div class="body">
