--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 </g>
 </svg>
 <div class="textbox">
-<p>I'm a 2D animation and digital illustration artist specializing in character design for branding, packaging, print, and digital projects. I aim to exceed client expectations and welcome collaboration opportunities. Let's create something visually appealing together!</p>
+<p>I'm a 2D animation and digital illustration artist specializing in 2D character design, branding, packaging, print, and digital projects. I aim to exceed client expectations and welcome collaboration opportunities. Let's create something visually appealing together!</p>
 </div><!--</center>-->
 
 <?xml version="1.0" encoding="utf-8"?>
