--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
    <div class="container">
    <div class="logo">
     <!--  <div class="video"> -->
-         <video src="media/banner.mp4" autoplay loop muted></video>
+         <video poster="https://live.staticflickr.com/65535/52792517232_68f7b035be_b.jpg" src="media/banner.mp4" src="media/banner.mp4" autoplay loop muted></video>
        <!--   </div> -->
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 26.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
